[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/OptionsMenu.gd" type="Script" id=1]

[node name="OptionsMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MenuBackground" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.145098, 0.933333, 0.380392, 1 )

[node name="QuitButton" type="Button" parent="MenuBackground"]
anchor_left = -1.0
anchor_right = -1.0
margin_left = 1384.0
margin_top = 272.0
margin_right = 1704.0
margin_bottom = 292.0
text = "Quit"

[node name="ResumeButton" type="Button" parent="MenuBackground"]
anchor_left = -1.0
anchor_right = -1.0
margin_left = 1384.0
margin_top = 310.0
margin_right = 1704.0
margin_bottom = 330.0
text = "Resume"

[node name="MenuButton" type="Button" parent="."]
margin_left = 880.0
margin_top = 536.0
margin_right = 1000.0
margin_bottom = 584.0
text = "Menu"

[connection signal="pressed" from="MenuBackground/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="MenuBackground/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
